/*
Copyright The Searchlight Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package kubeform.dev.installer.apis.installer.v1alpha1;

import "k8s.io/api/core/v1/generated.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

message ContianerRef {
  optional ImageRef imageRef = 1;

  // Compute Resources required by the sidecar container.
  // +optional
  optional k8s.io.api.core.v1.ResourceRequirements resources = 2;

  // Security options the pod should run with.
  // +optional
  optional k8s.io.api.core.v1.SecurityContext securityContext = 3;
}

message ImageRef {
  optional string registry = 1;

  optional string repository = 2;

  optional string tag = 3;
}

// +kubebuilder:object:root=true
// +kubebuilder:resource:path=kubeformoperators,singular=kubeformoperator,categories={kubeform,appscode}
message KubeformOperator {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional KubeformOperatorSpec spec = 2;
}

// KubeformOperatorList is a list of KubeformOperators
message KubeformOperatorList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items is a list of KubeformOperator CRD objects
  repeated KubeformOperator items = 2;
}

// KubeformOperatorSpec is the schema for Kubeform Operator values file
message KubeformOperatorSpec {
  // +optional
  optional string nameOverride = 1;

  // +optional
  optional string fullnameOverride = 2;

  optional int32 replicaCount = 3;

  optional ContianerRef operator = 4;

  optional string imagePullPolicy = 5;

  // +optional
  repeated string imagePullSecrets = 6;

  // +optional
  optional bool criticalAddon = 7;

  // +optional
  optional int32 logLevel = 8;

  // +optional
  map<string, string> annotations = 9;

  // +optional
  map<string, string> podAnnotations = 10;

  // +optional
  map<string, string> nodeSelector = 11;

  // If specified, the pod's tolerations.
  // +optional
  repeated k8s.io.api.core.v1.Toleration tolerations = 12;

  // If specified, the pod's scheduling constraints
  // +optional
  optional k8s.io.api.core.v1.Affinity affinity = 13;

  // PodSecurityContext holds pod-level security attributes and common container settings.
  // Optional: Defaults to empty.  See type description for default values of each field.
  // +optional
  optional k8s.io.api.core.v1.PodSecurityContext podSecurityContext = 14;

  optional ServiceAccountSpec serviceAccount = 15;

  // +optional
  optional string secretKey = 16;

  // +optional
  optional bool enableAnalytics = 17;
}

message ServiceAccountSpec {
  optional bool create = 1;

  // +optional
  optional string name = 2;

  // +optional
  map<string, string> annotations = 3;
}

